<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".personal_area">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_2"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
        android:onClick="onNewActivity"/>

    <ImageButton
        android:id="@+id/buttonSearch"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon"
        tools:ignore="SpeakableTextPresentCheck"
        android:onClick="onNewActivity2"/>

    <TextView
        android:id="@+id/pers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/perstxt"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="116dp"
        android:text="@string/hellotxt"
        android:textColor="#040404"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/roket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/roket_card__1_" />

    <Button
        android:id="@+id/buttonMap"
        android:layout_width="324dp"
        android:layout_height="57dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="328dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#DD1D1D"
        android:text="@string/maptxt"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonChat"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="412dp"
        android:backgroundTint="#DCDCDC"
        android:text="@string/chattxt"
        android:textAllCaps="false"
        android:textColor="#959393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonset"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="#DCDCDC"
        android:text="@string/setting"
        android:textAllCaps="false"
        android:textColor="#959393"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>